--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,27 +3,27 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("fonts/Mulish-Bold.woff2") format("woff2");
+    src: url("css/fonts/Mulish-Bold.woff2") format("woff2");
   }
   @font-face {
     font-family: "Mulish";
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("fonts/Mulish-SemiBold.woff2") format("woff2");
+    src: url("css/fonts/Mulish-SemiBold.woff2") format("woff2");
   }
   @font-face {
     font-family: "Mulish";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("fonts/Mulish-Regular.woff2") format("woff2");
+    src: url("css/fonts/Mulish-Regular.woff2") format("woff2");
   }
   @font-face {
     font-family: "Mulish";
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url("fonts/Mulish-Light.woff2") format("woff2");
+    src: url("css/fonts/Mulish-Light.woff2") format("woff2");
   }
   
