--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,92 @@
 @import url(fonts.css);
 @import url(reset.css);
+
+.section-two {
+    margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  
+  .our-services-h2 {
+    font-weight: 700;
+    font-size: 3.6em;
+    line-height: 1.56;
+  }
+  .our-services-h2::after {
+    content: "";
+    width: 56px;
+    height: 2px;
+    border-radius: 1px;
+    background-color: #000000;
+    display: block;
+    margin: 26px auto 0 auto;
+  }
+  .our-services-p {
+    font-weight: 300;
+    font-size: 1.8em;
+    line-height: 1.67;
+    text-align: center;
+    color: #7d7987;
+    width: 952px;
+    margin-top: 33px;
+    margin-bottom: 80px;
+  }
+  
+  .card-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 36px;
+    
+  }
+  .card-box li {
+    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
+    border-radius: 20px;
+    width: 350px;
+   background-color:#7d7987;
+   padding: 50px 40px;
+   display: flex;
+   flex-direction: column;
+   align-items: start;
+  }
+  
+  .card-box h3 {
+    font-weight: 700;
+    font-size: 2.4em;
+    line-height: 1.75;
+    margin-top: 22px;
+  }
+  .card-box p {
+    font-weight: 300;
+    font-size: 1.6em;
+    line-height: 1.75;
+    width: 266px;
+  }
+  
+  .card-box a {
+    padding: 50px 40px;
+  }
+  
+  .card-box img {
+    height: 80px;
+    width: auto;
+    
+  }
+  
+  .learn-more{
+    justify-content: center;
+    Width: 200px;
+    margin-top: 69px;
+    border: 1.4px solid #458FF6;
+    border-radius: 55px;
+    color: #458FF6;
+    background: #ffffff;
+    padding: 3px 51px 1px;
+    font-size: 18px;
+    line-height: 60px;
+  }
+  
